<resources>
    <string name="app_name">情緒評分</string>
    <string name="painRate">情緒評分</string>
    <string name="minus">－</string>
    <string name="_1">1000</string>
    <string name="increase">＋</string>
    <string name="start">開始</string>
    <string name="pause">暫停</string>
    <string name="send_email">Send Email</string>
    <string name="clear_data">Clear Data</string>
    <string name="ms">ms</string>
    <string name="name">姓名：</string>
    <string name="reset">重置</string>
    <string name="setting">設定</string>
    <string name="exportExcel">匯出</string>
    <string name="restart">重新開始</string>
</resources>
