<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp" >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:text="@string/painRate"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        >

        <Button
            android:id="@+id/startBtn"
            android:layout_width="60dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:text="@string/start"/>

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="60dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/settingBtn"
            android:layout_width="60dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:text="@string/setting"/>

    </LinearLayout>



<!--style="@style/ActionBarButtonWhite"-->
</RelativeLayout>