<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"
            android:padding="@dimen/small_padding"
            android:text="@string/name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:padding="@dimen/small_padding"
            android:textSize="@dimen/large_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:gravity="center">

        <TextView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/minus" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/timeEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:maxLines="1"
                android:digits="0123456789"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:background="@android:color/white"
                android:text="@string/ms"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/increase" />

    </LinearLayout>
</LinearLayout>